[gd_scene load_steps=23 format=2]

[ext_resource path="res://Assets/tilesets/16x16-DirtBrick_Assets_V5.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Save_point.gd" type="Script" id=12]
[ext_resource path="res://Assets/Prefabs/save_point/sword_light.png" type="Texture" id=13]
[ext_resource path="res://Prefabs/audio_manager.tscn" type="PackedScene" id=14]
[ext_resource path="res://Assets/UI/inputs/up1.png" type="Texture" id=15]
[ext_resource path="res://Assets/UI/inputs/up0.png" type="Texture" id=16]
[ext_resource path="res://Assets/UI/inputs/plus1.png" type="Texture" id=17]
[ext_resource path="res://Assets/UI/inputs/plus0.png" type="Texture" id=18]
[ext_resource path="res://Assets/UI/inputs/z0.png" type="Texture" id=19]
[ext_resource path="res://Assets/UI/inputs/z1.png" type="Texture" id=20]

[sub_resource type="Environment" id=6]
background_mode = 4
background_energy = 0.04
glow_enabled = true

[sub_resource type="Animation" id=13]
resource_name = "New Anim"

[sub_resource type="ParticlesMaterial" id=16]
lifetime_randomness = 0.4
emission_shape = 2
emission_box_extents = Vector3( 32, 15, 1 )
flag_disable_z = true
gravity = Vector3( 0, -40, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 16 ), ExtResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 2.0
} ]

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ ExtResource( 17 ), ExtResource( 18 ) ],
"loop": true,
"name": "default",
"speed": 2.0
} ]

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ ExtResource( 20 ), ExtResource( 19 ) ],
"loop": true,
"name": "default",
"speed": 2.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 12.5, 17.5 )

[sub_resource type="Gradient" id=7]
offsets = PoolRealArray( 0, 0.794574, 1 )
colors = PoolColorArray( 1, 1, 1, 0.997781, 1, 1, 1, 0.772549, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=8]
gradient = SubResource( 7 )

[sub_resource type="Curve" id=9]
max_value = 2.0
_data = [ Vector2( 0, 1.34194 ), 0.0, -1.43793, 0, 0, Vector2( 1, 0.43871 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=10]
curve = SubResource( 9 )

[sub_resource type="ParticlesMaterial" id=11]
emission_shape = 2
emission_box_extents = Vector3( 14, 1, 1 )
flag_disable_z = true
gravity = Vector3( 0, -20, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 10 )
color = Color( 0.615686, 1, 0, 1 )
color_ramp = SubResource( 8 )

[node name="Save_point" type="Node2D"]
script = ExtResource( 12 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 4, -16 )
texture = ExtResource( 1 )
hframes = 3
vframes = 4
frame = 8

[node name="Light2D" type="Light2D" parent="Sprite"]
position = Vector2( 0, -11 )
scale = Vector2( 1.75, 1 )
texture = ExtResource( 13 )
texture_scale = 1.5

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
root_node = NodePath("../..")
"anims/New Anim" = SubResource( 13 )

[node name="Particles2D" type="Particles2D" parent="Sprite"]
position = Vector2( 0, -27 )
amount = 90
preprocess = 10.0
process_material = SubResource( 16 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Input" type="Node2D" parent="."]
visible = false
position = Vector2( 0, -49 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Input"]
position = Vector2( -12.5, 0 )
frames = SubResource( 5 )
playing = true

[node name="AnimatedSprite2" type="AnimatedSprite" parent="Input"]
position = Vector2( 0.5, 0 )
frames = SubResource( 14 )
frame = 1
playing = true

[node name="AnimatedSprite3" type="AnimatedSprite" parent="Input"]
position = Vector2( 13.5, 0 )
frames = SubResource( 15 )
frame = 1
playing = true

[node name="function_area" type="Area2D" parent="."]
visible = false
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="function_area"]
position = Vector2( -0.5, -17.5 )
shape = SubResource( 4 )

[node name="Particles2D" type="Particles2D" parent="."]
visible = false
modulate = Color( 1, 3, 1, 1 )
position = Vector2( 0, -1 )
amount = 16
lifetime = 2.0
process_material = SubResource( 11 )

[node name="audio_manager" parent="." instance=ExtResource( 14 )]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="function_area" to="." method="_on_function_area_body_entered"]
[connection signal="body_exited" from="function_area" to="." method="_on_function_area_body_exited"]
